--- a/index.html
+++ b/index.html
@@ -1,79 +1,59 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/cabecalho.css" />
-    <link rel="stylesheet" href="css/chamada.css" />
-    <link rel="stylesheet" href="css/destaques.css" />
-    <link rel="stylesheet" href="css/diferenciais.css">
-    <link rel="stylesheet" href="css/sobre.css">
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/planos.css">
-    <link rel="stylesheet" href="css/institucional.css">
-    <title>Home - Apeperia</title>
-  </head>
-  <body>
-    <header class="cabecalho container">
-      <img
-        src="img/logo-apeperia.svg"
-        alt="Logo da Apeperia"
-        class="cabecalho__logo"
-      />
-      <nav class="cabecalho__navegacao">
-        <ul>
-          <li class="cabecalho__link"><a href="#">Sobre</a></li>
-          <li class="cabecalho__link"><a href="#">Planos</a></li>
-          <li class="cabecalho__link"><a href="#">Blog</a></li>
-          <li class="cabecalho__link"><a href="#">Destaques</a></li>
-          <li class="cabecalho__link"><a href="#">Institucional</a></li>
-          <li class="cabecalho__link"><a href="#">Contato </a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="chamada container">
-        <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
-        <p class="chamada__texto">
-          Apeperia tem um jeito inovador de comparar e montar aplicativos para
-          pequenas e médias empresas.
-        </p>
-        <a href="#" class="chamada__botao botao">Conheça os planos</a>
-      </section>
-      <section class="destaques container">
-        <h2 class="destaques__titulo">Destaques</h2>
-        <a href="#">
-          <figure class="destaques__painel">
-            <img
-              src="img/comecando-criar-logotipo.png"
-              alt="Painel do post sobre criação de logotipo"
-              class="destaques__painel-imagem"
-            />
-            <figcaption class="destaques__painel-texto">
-              Conheça as primeiras etapas para a criação de um logotipo
-            </figcaption>
-          </figure>
-        </a>
-        <a href="#">
-          <figure class="destaques__painel">
-            <img
-              src="img/dicas-fotografia.png"
-              alt="Painel do post sobre fotografia com celular"
-              class="destaques__painel-imagem"><figcaption class="destaques__painel-texto">Veja dicas de como fotografar usando seu celular</figcaption>
-          </figure>
-          <a href="#" class="destaques__botao botao">Receber destaques por email</a>
-          </figure>
-        </a>
-      </section>
-      <section class="diferenciais container">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <title>Home | Apeperia</title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="css/reset.css" rel="stylesheet">
+        <link href="css/base.css" rel="stylesheet">
+        <link href="css/cabecalho.css" rel="stylesheet">
+        <link href="css/chamada.css" rel="stylesheet">
+        <link href="css/destaques.css" rel="stylesheet">
+        <link href="css/diferenciais.css" rel="stylesheet">
+        <link href="css/sobre.css" rel="stylesheet">
+        <link href="css/planos.css" rel="stylesheet">
+        <link href="css/contato.css" rel="stylesheet">
+        <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/rodape.css" rel="stylesheet">
+    </head>
+    <body>
+        <header class="cabecalho container">
+            <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="cabecalho__logo">
+            <nav class="cabecalho__navegacao">
+                <ul>
+                    <li class="cabecalho__link"><a href="#">Sobre</a></li>
+                    <li class="cabecalho__link"><a href="#">Planos</a></li>
+                    <li class="cabecalho__link"><a href="#">Blog</a></li>
+                    <li class="cabecalho__link"><a href="#">Destaques</a></li>
+                    <li class="cabecalho__link"><a href="#">Institucional</a></li>
+                    <li class="cabecalho__link"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="chamada container">
+                <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
+                <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
+                <a href="#" class="chamada__botao botao">Conheça os planos</a>
+            </section>
+            <section class="destaques container">
+                <h2 class="destaques__titulo">Destaques</h2>
+                <a href="#">
+                    <figure class="destaques__painel">
+                        <img src="img/comecando-criar-logotipo.png" alt="Painel do post sobre criação de logotipo" class="destaques__painel-imagem">
+                        <figcaption class="destaques__painel-texto">Conheça as primeiras etapas para a criação de um logotipo</figcaption>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure class="destaques__painel">
+                        <img src="img/dicas-fotografia.png" alt="Painel do post sobre fotografia com celular" class="destaques__painel-imagem">
+                        <figcaption class="destaques__painel-texto">Veja dicas de como fotografar usando seu celular</figcaption>
+                    </figure>
+                </a>
+                <a href="#" class="destaques__botao botao">Receber destaques por email</a>
+            </section>
+            <section class="diferenciais container">
                 <ul class="diferenciais__lista">
                     <li class="diferenciais__item diferenciais__item--tempo">
                         <h2 class="item__titulo">Tempo</h2>
@@ -88,8 +68,8 @@
                         <p class="item__texto">Equipe experiente e especializada! Testamos todos os produtos antes do lançamento.</p>
                     </li>
                 </ul>
-      </section>
-      <section class="sobre container">
+            </section>
+            <section class="sobre container">
                 <div class="sobre__conteudo">
                     <h2 class="sobre__titulo">Sobre</h2>
                     <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas</strong>!</p>
@@ -108,8 +88,8 @@
                     <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
                 </div>
                 <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
-      </section>
-          <section class="planos container">
+            </section>
+            <section class="planos container">
                 <h2 class="planos__titulo">Planos</h2>
                 <ul class="planos__cartoes">
                     <li class="cartao cartao--start">
@@ -150,6 +130,40 @@
                 <p>Entre em contato com a gente</p>
                 <a href="contato.html" class="contato__botao botao">Entre em contato</a>
             </section>
-    </main>
-  </body>
+            <section class="institucional container">
+                <h2 class="institucional__titulo">Institucional</h2>
+                <div class="institucional__conteudo">
+                    <div class="institucional__informacoes">
+                        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                    <address class="institucional__endereco">
+                        Rua Vergueiro, 3185</br>
+                        Vila Mariana, São Paulo
+                        <article class="institucional__contato">
+                            <p><a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou <a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a></p>
+                        </article>
+                    </address>
+                    </div>
+                    <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+                </div>
+            </section>
+        </main>
+        <footer class="rodape container">
+            <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
+            <ul class="rodape__social">
+                <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
+                <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do twitter"></a></li>
+                <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
+            </ul>
+            <nav>
+                <ul class="rodape__navegacao">
+                    <li class="rodape__link"><a href="#">Sobre</a></li>
+                    <li class="rodape__link"><a href="#">Planos</a></li>
+                    <li class="rodape__link"><a href="#">Blog</a></li>
+                    <li class="rodape__link"><a href="#">Destaques</a></li>
+                    <li class="rodape__link"><a href="#">Institucional</a></li>
+                    <li class="rodape__link"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 </html>
